# api-todolist

./: .gitignore  Dockerfile  compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: pipeline.yml
app/: database.py  main.py  models.py  schemas.py  security.py  settings.py
app/routers/: auth.py  todo.py  todos.py  users.py
migrations/: env.py
migrations/versions/: 0223c07010ab_update_table_todos.py  21df5470d5db_create_table_todos.py  aa15a44ea089_create_users_table.py  fca231682a20_alter_table_users.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todos.py  test_users.py
